--- a/Interface1.html
+++ b/Interface1.html
@@ -57,6 +57,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            transition: width 0.3s ease;
         }
         .sidebar a {
             display: block;
@@ -106,22 +107,45 @@
         }
         @media (max-width: 1024px) {
             .dashboard {
-                padding-left: 20px; /* Adjust padding for smaller screens */
+                padding-left: 260px;
             }
             .sidebar {
-                width: 100%;
-                height: auto;
-                position: relative;
-            }
-            .sidebar a {
-                display: inline-block;
-                padding: 10px;
-            }
-            .sidebar .sidebar-footer {
-                position: static;
+                width: 260px;
             }
             .grid-container {
                 grid-template-columns: 1fr;
+            }
+        }
+        @media (max-width: 768px) {
+            .dashboard {
+                padding-left: 200px;
+            }
+            .sidebar {
+                width: 200px;
+            }
+            .grid-container {
+                grid-template-columns: 1fr;
+            }
+        }
+        @media (max-width: 480px) {
+            .dashboard {
+                padding-left: 160px;
+                padding-right: 10px;
+            }
+            .sidebar {
+                width: 160px;
+                padding: 10px;
+            }
+            .sidebar a {
+                padding: 10px 15px;
+                font-size: 0.9em;
+            }
+            .sidebar .sidebar-header {
+                font-size: 1.5em;
+            }
+            .sidebar .sidebar-footer a {
+                padding: 8px 16px;
+                font-size: 0.9em;
             }
         }
     </style>
@@ -136,11 +160,11 @@
             <a href="Interface2.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" class="inline-block w-6 h-6 mr-2"/>Mi Perfil</a>
             <a href="Interface3.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/medical-history.png" class="inline-block w-6 h-6 mr-2"/>Historial Médico</a>
             <a href="Interface4.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/calendar.png" class="inline-block w-6 h-6 mr-2"/>Citas</a>
-            <a href="Interface5.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/prescription.png" class="inline-block w-6 h-6 mr-2"/>Recetas</a>
+            <a href="Interface5.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/pill.png" class="inline-block w-6 h-6 mr-2"/>Recetas</a> <!-- Imagen cambiada -->
             <a href="Interface6.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/settings.png" class="inline-block w-6 h-6 mr-2"/>Configuración</a>
         </nav>
         <div class="sidebar-footer">
-            <a href="Log-in.htm"><img src="https://img.icons8.com/ios-filled/50/007bff/logout-rounded.png" class="inline-block w-6 h-6 mr-2"/>Cerrar Sesión</a>
+            <a href="index.html"><img src="https://img.icons8.com/ios-filled/50/007bff/logout-rounded.png" class="inline-block w-6 h-6 mr-2"/>Cerrar Sesión</a>
         </div>
     </div>
 
@@ -181,98 +205,101 @@
     </div>
 
     <script>
-        const ctx = document.getElementById('medicationChart').getContext('2d');
-        const medicationChart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: ['20/05', '21/05', '22/05', '23/05', '24/05', '25/05', '26/05'],
-                datasets: [{
-                    label: 'Medicación A',
-                    data: [1, 1, 1, 1, 1, 0, 1],
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    fill: true,
-                },
-                {
-                    label: 'Medicación B',
-                    data: [1, 1, 0, 1, 1, 1, 1],
-                    borderColor: 'rgba(255, 99, 132, 1)',
-                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                    fill: true,
-                },
-                {
-                    label: 'Medicación C',
-                    data: [0, 1, 1, 1, 1, 1, 0],
-                    borderColor: 'rgba(54, 162, 235, 1)',
-                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                    fill: true,
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    y: {
-                        beginAtZero: true,
-                        title: {
-                            display: true,
-                            text: 'Dosis tomada (1 = Sí, 0 = No)'
-                        }
-                    },
-                    x: {
-                        title: {
-                            display: true,
-                            text: 'Fecha'
-                        }
-                    }
-                },
-                plugins: {
-                    title: {
-                        display: true,
-                        text: 'Seguimiento de Medicación'
-                    }
-                }
+        // Función para obtener una fecha aleatoria
+        function generarFechaAleatoria() {
+            const fechaInicio = new Date();
+            const fechaFin = new Date();
+            fechaFin.setDate(fechaFin.getDate() + 30); // Rango de 30 días desde hoy
+            const fechaAleatoria = new Date(fechaInicio.getTime() + Math.random() * (fechaFin.getTime() - fechaInicio.getTime()));
+
+            const horas = Math.floor(Math.random() * 8) + 9; // Horas entre 9 AM y 5 PM
+            const minutos = Math.floor(Math.random() * 60);
+
+return `${fechaAleatoria.toLocaleDateString()} a las ${horas}:${minutos < 10 ? '0' + minutos : minutos}`;
+}
+
+async function obtenerClientes() {
+const response = await fetch('https://randomuser.me/api/?results=5');
+const data = await response.json();
+mostrarClientes(data.results);
+}
+
+function mostrarClientes(clientes) {
+const citasLista = document.getElementById('citas-lista');
+const proximasCitasLista = document.getElementById('proximas-citas-lista');
+const notificacionesLista = document.getElementById('notificaciones-lista');
+
+clientes.forEach(cliente => {
+    const citaItem = document.createElement('li');
+    citaItem.innerHTML = `Paciente: ${cliente.name.first} ${cliente.name.last} - ${cliente.location.city}, ${cliente.location.country}`;
+    citasLista.appendChild(citaItem);
+
+    const proximaCitaItem = document.createElement('li');
+    proximaCitaItem.innerHTML = `${cliente.name.first} tiene una cita el ${generarFechaAleatoria()}`;
+    proximasCitasLista.appendChild(proximaCitaItem);
+
+    const notificacionItem = document.createElement('li');
+    notificacionItem.innerHTML = `Recordatorio: ${cliente.name.first} necesita revisión médica`;
+    notificacionesLista.appendChild(notificacionItem);
+});
+}
+
+obtenerClientes();
+
+// Gráfica de seguimiento de medicamentos
+const ctx = document.getElementById('medicationChart').getContext('2d');
+const medicationChart = new Chart(ctx, {
+type: 'line',
+data: {
+    labels: ['20/05', '21/05', '22/05', '23/05', '24/05', '25/05', '26/05'],
+    datasets: [{
+        label: 'Medicación A',
+        data: [1, 1, 1, 1, 1, 0, 1],
+        borderColor: 'rgba(75, 192, 192, 1)',
+        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+        fill: true,
+    },
+    {
+        label: 'Medicación B',
+        data: [1, 1, 0, 1, 1, 1, 1],
+        borderColor: 'rgba(255, 99, 132, 1)',
+        backgroundColor: 'rgba(255, 99, 132, 0.2)',
+        fill: true,
+    },
+    {
+        label: 'Medicación C',
+        data: [0, 1, 1, 1, 1, 1, 0],
+        borderColor: 'rgba(54, 162, 235, 1)',
+        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+        fill: true,
+    }]
+},
+options: {
+    responsive: true,
+    scales: {
+        y: {
+            beginAtZero: true,
+            title: {
+                display: true,
+                text: 'Dosis tomada (1 = Sí, 0 = No)'
             }
-        });
-
-        // Función para cargar datos desde el archivo PHP usando AJAX
-        function cargarDatos() {
-            var xhr = new XMLHttpRequest();
-            xhr.open("GET", "get_data.php", true);
-            xhr.onreadystatechange = function () {
-                if (xhr.readyState == 4 && xhr.status == 200) {
-                    var data = JSON.parse(xhr.responseText);
-                    var citasLista = document.getElementById("citas-lista");
-                    var notificacionesLista = document.getElementById("notificaciones-lista");
-
-                    // Mostrar citas
-                    if (data.citas.length > 0) {
-                        data.citas.forEach(function (cita) {
-                            var li = document.createElement("li");
-                            li.textContent = "Consulta: " + cita.fecha_cita + " a las " + cita.hora_cita + " - Estado: " + cita.estado;
-                            citasLista.appendChild(li);
-                        });
-                    } else {
-                        citasLista.innerHTML = "<p>No tienes citas próximas.</p>";
-                    }
-
-                    // Mostrar notificaciones
-                    if (data.notificaciones.length > 0) {
-                        data.notificaciones.forEach(function (notificacion) {
-                            var li = document.createElement("li");
-                            li.textContent = notificacion.mensaje + " - " + notificacion.fecha_notificacion;
-                            notificacionesLista.appendChild(li);
-                        });
-                    } else {
-                        notificacionesLista.innerHTML = "<p>No tienes notificaciones.</p>";
-                    }
-                }
-            };
-            xhr.send();
+        },
+        x: {
+            title: {
+                display: true,
+                text: 'Fecha'
+            }
         }
-
-        // Cargar los datos cuando la página esté lista
-        window.onload = cargarDatos;
-    </script>
+    },
+    plugins: {
+        title: {
+            display: true,
+            text: 'Seguimiento de Medicación'
+        }
+    }
+}
+});
+</script>
 
 </body>
 </html>
