--- a/Interface4.html
+++ b/Interface4.html
@@ -19,7 +19,7 @@
             background-color: #f4f4f4;
             min-height: 100vh;
             padding: 20px;
-            padding-left: 300px; /* Space for the sidebar */
+            padding-left: 300px;
             padding-right: 20px;
         }
         .card {
@@ -34,9 +34,6 @@
             font-size: 1.5em;
             margin-bottom: 10px;
         }
-        .card p, .card ul {
-            margin-bottom: 5px;
-        }
         .card ul {
             list-style: none;
             padding: 0;
@@ -44,9 +41,6 @@
         .card ul li {
             padding: 10px 0;
             border-bottom: 1px solid #eee;
-        }
-        .card ul li:last-child {
-            border-bottom: none;
         }
         .sidebar {
             position: fixed;
@@ -82,13 +76,13 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
-        .sidebar .sidebar-footer {
+        .sidebar-footer {
             margin-top: auto;
             width: 100%;
             text-align: center;
             padding: 20px 0;
         }
-        .sidebar .sidebar-footer a {
+        .sidebar-footer a {
             display: inline-block;
             padding: 10px 20px;
             background-color: #ffeb3b;
@@ -96,39 +90,17 @@
             border-radius: 8px;
             transition: background 0.3s, color 0.3s;
         }
-        .sidebar .sidebar-footer a:hover {
+        .sidebar-footer a:hover {
             background-color: #ffc107;
             color: #0056b3;
-        }
-        .button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-align: center;
-            transition: background 0.3s, color 0.3s;
-        }
-        .button:hover {
-            background-color: #0056b3;
-            color: #ffeb3b;
         }
         #calendar {
             max-width: 100%;
             margin: 0 auto;
         }
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-        }
-        .wide-card {
-            grid-column: span 2;
-        }
         @media (max-width: 1024px) {
             .dashboard {
-                padding-left: 20px; 
+                padding-left: 20px;
             }
             .sidebar {
                 width: 100%;
@@ -139,11 +111,8 @@
                 display: inline-block;
                 padding: 10px;
             }
-            .sidebar .sidebar-footer {
+            .sidebar-footer {
                 position: static;
-            }
-            .grid-container {
-                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -157,17 +126,18 @@
             <a href="Interface2.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" class="inline-block w-6 h-6 mr-2"/>Mi Perfil</a>
             <a href="Interface3.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/medical-history.png" class="inline-block w-6 h-6 mr-2"/>Historial Médico</a>
             <a href="Interface4.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/calendar.png" class="inline-block w-6 h-6 mr-2"/>Citas</a>
-            <a href="Interface5.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/prescription.png" class="inline-block w-6 h-6 mr-2"/>Recetas</a>
+            <a href="Interface5.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/pill.png" class="inline-block w-6 h-6 mr-2"/>Recetas</a>
+            <a href="Mensajeria8.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/sms.png" class="inline-block w-6 h-6 mr-2"/>Mensajería</a>
             <a href="Interface6.html"><img src="https://img.icons8.com/ios-filled/50/ffffff/settings.png" class="inline-block w-6 h-6 mr-2"/>Configuración</a>
         </nav>
         <div class="sidebar-footer">
-            <a href="Log-in.htm"><img src="https://img.icons8.com/ios-filled/50/007bff/logout-rounded.png" class="inline-block w-6 h-6 mr-2"/>Cerrar Sesión</a>
-        </div>        
+            <a href="index.html"><img src="https://img.icons8.com/ios-filled/50/007bff/logout-rounded.png" class="inline-block w-6 h-6 mr-2"/>Cerrar Sesión</a>
+        </div>
     </div>
+
     <!-- Main content -->
     <div class="dashboard">
         <h2 class="text-3xl font-semibold mb-6 text-center text-teal-800">Calendario de Citas</h2>
-        <!-- Grid container for the cards -->
         <div class="grid-container">
             <!-- Calendario de Citas -->
             <div class="card wide-card">
@@ -183,57 +153,59 @@
             <!-- Confirmaciones de citas por parte de los médicos -->
             <div class="card">
                 <h3 class="text-teal-800">Confirmaciones de Citas</h3>
-                <ul>
-                    <li>Cita con el Dr. López - Cardiología - Confirmada</li>
-                    <li>Cita con el Dr. Pérez - Dermatología - Pendiente</li>
-                    <li>Cita con el Dr. García - Pediatría - Confirmada</li>
-                </ul>
+                <ul id="confirmaciones-lista"></ul>
             </div>
         </div>
     </div>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', async function() {
+            // Función para generar fechas y horas aleatorias
+            function generarFechaAleatoria() {
+                const ahora = new Date();
+                const diasAleatorios = Math.floor(Math.random() * 30); // Citas en los próximos 30 días
+                const horasAleatorias = Math.floor(Math.random() * 8) + 9; // Entre 9am y 5pm
+                const fecha = new Date(ahora);
+                fecha.setDate(ahora.getDate() + diasAleatorios);
+                fecha.setHours(horasAleatorias, 0, 0, 0);
+                return fecha;
+            }
+
+            // Cargar datos ficticios de citas usando la API de RandomUser
+            const response = await fetch('https://randomuser.me/api/?results=5');
+            const data = await response.json();
+            const citas = data.results;
+
             var calendarEl = document.getElementById('calendar');
             var calendar = new FullCalendar.Calendar(calendarEl, {
                 initialView: 'dayGridMonth',
-                events: [
-                    {
-                        title: 'Cita con el Dr. López',
-                        start: '2024-05-20',
-                        description: 'Consulta de Cardiología',
-                        extendedProps: {
-                            specialty: 'Cardiología',
-                            doctor: 'Dr. López'
-                        }
-                    },
-                    {
-                        title: 'Cita con el Dr. Pérez',
-                        start: '2024-05-25',
-                        description: 'Consulta de Dermatología',
-                        extendedProps: {
-                            specialty: 'Dermatología',
-                            doctor: 'Dr. Pérez'
-                        }
-                    },
-                    {
-                        title: 'Cita con el Dr. García',
-                        start: '2024-05-30',
-                        description: 'Consulta de Pediatría',
-                        extendedProps: {
-                            specialty: 'Pediatría',
-                            doctor: 'Dr. García'
-                        }
+                events: citas.map((usuario) => ({
+                    title: `Cita con el Dr. ${usuario.name.last}`,
+                    start: generarFechaAleatoria(),
+                    description: `Consulta de ${usuario.location.state}`,
+                    extendedProps: {
+                        specialty: usuario.location.state,
+                        doctor: `Dr. ${usuario.name.last}`
                     }
-                ],
+                })),
                 eventClick: function(info) {
                     alert('Detalles de la cita:\n\n' + 
                           'Título: ' + info.event.title + '\n' +
                           'Fecha: ' + info.event.start.toDateString() + '\n' +
+                          'Hora: ' + info.event.start.getHours() + ':00' + '\n' +
                           'Especialidad: ' + info.event.extendedProps.specialty + '\n' +
                           'Doctor: ' + info.event.extendedProps.doctor);
                 }
             });
             calendar.render();
+
+            // Llenar la lista de confirmaciones
+            const confirmacionesLista = document.getElementById('confirmaciones-lista');
+            citas.forEach((usuario) => {
+                const confirmacionItem = document.createElement('li');
+                confirmacionItem.textContent = `Cita con el Dr. ${usuario.name.last} - ${usuario.location.state} - ${Math.random() > 0.5 ? 'Confirmada' : 'Pendiente'}`;
+                confirmacionesLista.appendChild(confirmacionItem);
+            });
         });
 
         function addEvent() {
